Dirty fix to force wrapping for long strings in tables (#79)
* CDSID-604 - initial draft with failing tests

* CDSID-604 | swapped date and year round

* CDSID-604 - changes with the screen name and updates to use Option

* CDSID- 604 changes to view with the issues raised during QA and updates as per the changes in master

* CDSID- 604 updates for review comments and validation updates

* CDSID- 604 updates for review comments for redirects in other controllers of goodsItem

* CDSID- 604 updates for QA bugs

* dropping dates into correct date field mark up

- added new helper/component and hard coded fieldset

Note:
- errors are going to be an issue and this REALLY needs improving on the back end or a date component making

* CDSID- 604 updates for QA bugs

* CDSID- 604 - Date pattern

* date fields/component and error update

* fix messages for input_date.scala.html

* dirty fix to force long strings to wrap in tables for additional documents page

* add full-width modifier class for full width page

* removing classes from messages

--- a/app/assets/stylesheets/shame.scss
+++ b/app/assets/stylesheets/shame.scss
@@ -10,3 +10,16 @@
   height: 10px;
   background-color: #005ea5;
 }
+
+.wide-table {
+	th,
+	td {
+		vertical-align: top;
+
+		.long-input {
+			display: block;
+			width: 100px;
+			word-break: break-word;
+		}
+	}
+}
